--- a/src/components/TimeOffList.css
+++ b/src/components/TimeOffList.css
@@ -187,7 +187,7 @@
 }
 
 .timeoff-table th {
-  text-align: left;
+  text-align: center;
   padding: 16px;
   font-size: 14px;
   font-weight: 600;
@@ -208,6 +208,7 @@
   padding: 16px;
   font-size: 14px;
   color: #1f2937;
+  text-align: center;
 }
 
 .employee-cell {
